--- a/file sort/requirements.txt
+++ b/file sort/requirements.txt
@@ -3,3 +3,8 @@ python-docx>=0.8.11     # for extracting text from .docx files
 nltk>=3.8.1             # for tokenizing and keyword detection
 PyQt5>=5.15.4
 psutil>=5.9.0
+PyQt5>=5.15.4          # for UI
+psutil>=5.9.0
+python-docx>=0.8.11
+PyMuPDF>=1.22.0
+nltk>=3.8.1
